explicacion de acvivdad 1

--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -10,7 +10,43 @@
 <body>
     <h1>Hola mundo</h1>
     <hr>
-    <img src="imagenes/logo.png">
+    <a href="http://fing.uach.mx/" target="_blank">
+        <img src="imagenes/logo.png" style="width: 100px;">
+    </a>
+
+    <table style="width: 100%;">
+        <thead>
+            <tr>
+                <td>Hora</td>
+                <td>Lunes</td>
+                <td>Mrtes</td>
+                <td>Miercoles</td>
+                <td>Jueves</td>
+                <td>Viernes</td>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>10-12</td>
+                <td style="background-color: gray;">-</td>
+                <td style="background-color: gray;">-</td>
+                <td style="background-color: red;"><a href="detalle.html">Paradigmas</a></td>
+                <td style="background-color: red;"><a href="detalle.html">Paradigmas</a></td>
+                <td style="background-color: gray;">-</td>
+            <tr>
+            <tr>
+                <td>12-14</td>
+                <td style="background-color: green;">Derecho</td>
+                <td style="background-color: green;">Derecho</td>
+                <td style="background-color: green;">Intelegincia artificial</td>
+                <td style="background-color: green;">Intelegincia artificial</td>
+                <td style="background-color: gray;">-</td>
+            <tr>
+
+        </tbody>
+    </table>
+
 </body>
 
 </html>
